<resources>
    <string name="app_name">NutriLabel</string>
    <string name="ImageView">Imageview</string>


    <string name="result_image_desc">crop result</string>
    <string name="main_button_select_image">Select Image</string>
    <string name="main_activity_desciption">Sample activity to start image cropping.\nExample: User profile activity to select avatar.</string>


    <string name="energy">Energy</string>
    <string name="fat">Fat</string>
    <string name="saturates">Saturates</string>
    <string name="sugars">Sugars</string>

    <string name="salts">Salt</string>
    <string name="portion">Portion</string>
    <string name="title_activity_delete_photos">DeletePhotos</string>

    <string-array name="decimalNumbers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="fractionNumbers">
        <item>0</item>
        <item>&#188;</item>
        <item>&#189;</item>
        <item>&#190;</item>
    </string-array>

    <string-array name="calendarView">
        <item>Day View</item>
        <item>Week View</item>
        <item>Month View</item>
    </string-array>
    
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


</resources>
