<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="masonator117.com.nutrilabel.MainActivity">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:titleTextColor="@android:color/white" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/energy"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/energy" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/fat" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/saturates" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/sugars" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/salts" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center_vertical|center_horizontal">

            <com.brkckr.circularprogressbar.CircularProgressBar
                android:id="@+id/energyProgressBarRecycler"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"
                android:layout_centerHorizontal="true"
                app:cpbBackgroundColor="#F1992D"
                app:cpbBackgroundWidth="@dimen/background_width"
                app:cpbProgressColor="#9F3238"

                app:cpbProgressWidth="@dimen/progress_width"
                app:cpbState="clockwise" />

            <TextView
                android:id="@+id/energyPercent"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"
                android:layout_above="@+id/fatProgressBarRecycler"
                android:layout_alignStart="@+id/energyProgressBarRecycler"
                android:gravity="center_vertical|center_horizontal"
                android:text="0%" />

            <com.brkckr.circularprogressbar.CircularProgressBar
                android:id="@+id/fatProgressBarRecycler"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"

                android:layout_alignStart="@+id/energyProgressBarRecycler"
                android:layout_below="@+id/energyProgressBarRecycler"
                ProgressWheel:cpbBackgroundColor="#F1992D"
                ProgressWheel:cpbBackgroundWidth="@dimen/background_width"
                ProgressWheel:cpbProgressColor="#9F3238"
                ProgressWheel:cpbProgressWidth="@dimen/progress_width"
                ProgressWheel:cpbState="clockwise" />

            <TextView
                android:id="@+id/fatPercent"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"
                android:layout_above="@+id/saturatesProgressBarRecycler"
                android:layout_alignStart="@+id/fatProgressBarRecycler"
                android:gravity="center_vertical|center_horizontal"
                android:text="0%" />

            <com.brkckr.circularprogressbar.CircularProgressBar
                android:id="@+id/saturatesProgressBarRecycler"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"

                android:layout_alignStart="@+id/fatProgressBarRecycler"
                android:layout_below="@+id/fatProgressBarRecycler"
                ProgressWheel:cpbBackgroundColor="#F1992D"
                ProgressWheel:cpbBackgroundWidth="@dimen/background_width"
                ProgressWheel:cpbProgressColor="#9F3238"
                ProgressWheel:cpbProgressWidth="@dimen/progress_width"
                ProgressWheel:cpbState="clockwise" />

            <TextView
                android:id="@+id/saturatesPercent"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"
                android:layout_above="@+id/sugarsProgressBar"
                android:layout_alignStart="@+id/saturatesProgressBarRecycler"
                android:gravity="center_vertical|center_horizontal"
                android:text="0%" />

            <com.brkckr.circularprogressbar.CircularProgressBar
                android:id="@+id/sugarsProgressBar"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"

                android:layout_alignStart="@+id/saturatesProgressBarRecycler"
                android:layout_below="@+id/saturatesProgressBarRecycler"
                ProgressWheel:cpbBackgroundColor="#F1992D"
                ProgressWheel:cpbBackgroundWidth="@dimen/background_width"
                ProgressWheel:cpbProgressColor="#9F3238"
                ProgressWheel:cpbProgressWidth="@dimen/progress_width"
                ProgressWheel:cpbState="clockwise" />

            <TextView
                android:id="@+id/sugarsPercent"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"
                android:layout_above="@+id/saltProgressBarRecycler"
                android:layout_alignStart="@+id/sugarsProgressBar"
                android:gravity="center_vertical|center_horizontal"
                android:text="0%" />

            <com.brkckr.circularprogressbar.CircularProgressBar
                android:id="@+id/saltProgressBarRecycler"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"

                android:layout_alignStart="@+id/sugarsProgressBar"
                android:layout_below="@+id/sugarsProgressBar"
                ProgressWheel:cpbBackgroundColor="#F1992D"
                ProgressWheel:cpbBackgroundWidth="@dimen/background_width"
                ProgressWheel:cpbProgressColor="#9F3238"
                ProgressWheel:cpbProgressWidth="@dimen/progress_width"
                ProgressWheel:cpbState="clockwise"
                 />

            <TextView
                android:id="@+id/saltPercent"
                android:layout_width="@dimen/progress"
                android:layout_height="@dimen/progress"
                android:layout_alignStart="@+id/saltProgressBarRecycler"
                android:layout_below="@+id/sugarsProgressBar"
                android:gravity="center_vertical|center_horizontal"
                android:text="0%" />

        </RelativeLayout>

        <Button
            android:id="@+id/toPicture"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="12dp"
            android:text="Capture Label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/addLabel"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/toPicture"
            android:layout_alignStart="@+id/toPicture"
            android:text="Add Label" />

        <!--android:max="100"-->
        <!--android:progress="50"-->
        <!--tools:style="@style/Widget.AppCompat.ProgressBar"-->


    </RelativeLayout>

    <!--<include-->
    <!--layout="@layout/app_bar_main2"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" />-->

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main2"
        app:menu="@menu/drawer" />



    <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:background="?attr/colorPrimary"-->
        <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />-->

    <!--<FrameLayout-->
        <!--android:id="@+id/content_frame"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--<android.support.v7.widget.Toolbar-->
            <!--android:id="@+id/toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="?attr/actionBarSize"-->
            <!--android:background="?attr/colorPrimary"-->
            <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />-->

    <!--</FrameLayout>-->


</android.support.v4.widget.DrawerLayout>
